--- a/ECON3740_W25_lab1.ipynb
+++ b/ECON3740_W25_lab1.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPdcjfeK7exz9fAgX8WQudO",
+      "authorship_tag": "ABX9TyP0nMWJmgjWQwf/XPVY4qwe",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -24,7 +24,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/havaledar/ECON3740_W25/blob/main/ECON3740_W24_lab1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/havaledar/ECON3740_W25/blob/main/ECON3740_W25_lab1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -538,7 +538,7 @@
     {
       "cell_type": "code",
       "source": [
-        "data = pd.read_csv('/content/meap01.csv')"
+        "data = pd.read_excel('/content/meap01.xlsx')"
       ],
       "metadata": {
         "id": "QVpCjCUK505m"
