--- a/ECON3740_W25_lab6.ipynb
+++ b/ECON3740_W25_lab6.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPqrX9R82iUwtTQ3ImpKNpz",
+      "authorship_tag": "ABX9TyOSZdrCQb0LszSS7weDe2Sp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -59,9 +59,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "oDtMgu1yE7sJ",
-        "outputId": "dc4f7dd3-6ea2-4a9c-d205-e0eaf623da02"
+        "outputId": "5b1e89e5-d974-468a-8b68-fedfcce31616"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -76,7 +76,7 @@
             "Requirement already satisfied: tzdata>=2022.7 in /usr/local/lib/python3.11/dist-packages (from pandas->wooldridge) (2025.1)\n",
             "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.11/dist-packages (from python-dateutil>=2.8.2->pandas->wooldridge) (1.17.0)\n",
             "Downloading wooldridge-0.4.5-py3-none-any.whl (5.1 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m5.1/5.1 MB\u001b[0m \u001b[31m24.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m5.1/5.1 MB\u001b[0m \u001b[31m7.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hInstalling collected packages: wooldridge\n",
             "Successfully installed wooldridge-0.4.5\n"
           ]
@@ -100,7 +100,7 @@
       "metadata": {
         "id": "yoZkki4DFDRo"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -120,13 +120,13 @@
       "metadata": {
         "id": "vYjYjdX7Dc3y"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "## Models"
+        "## Variables"
       ],
       "metadata": {
         "id": "YypdFE1GFoPM"
@@ -140,68 +140,29 @@
       "metadata": {
         "id": "IxzxrnQ8F4By"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "### Full"
-      ],
-      "metadata": {
-        "id": "1ZwvTvBQFu_a"
-      }
     },
     {
       "cell_type": "code",
       "source": [
-        "X_full = df[['prpblck', 'lincome', 'prppov', 'lhseval']]"
+        "X = df[['prpblck', 'lincome', 'prppov', 'lhseval']]"
       ],
       "metadata": {
         "id": "0-wOi5bYF0e3"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "### Restricted"
-      ],
-      "metadata": {
-        "id": "SR2Dj2WYFxMc"
-      }
     },
     {
       "cell_type": "code",
       "source": [
-        "X_restricted = df[['prpblck', 'prppov']]"
-      ],
-      "metadata": {
-        "id": "gSiIUJZkF2Qa"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "## Intercept"
-      ],
-      "metadata": {
-        "id": "OFLMU5q6GXci"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "X_full = sm.add_constant(X_full)\n",
-        "X_restricted = sm.add_constant(X_restricted)"
+        "X = sm.add_constant(X)"
       ],
       "metadata": {
         "id": "Qa1O9f_XFnic"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -216,13 +177,12 @@
     {
       "cell_type": "code",
       "source": [
-        "model_full = sm.OLS(y, X_full).fit()\n",
-        "model_restricted = sm.OLS(y, X_restricted).fit()"
+        "model = sm.OLS(y, X).fit()"
       ],
       "metadata": {
         "id": "8J8L-T94Gfcy"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -237,12 +197,12 @@
     {
       "cell_type": "code",
       "source": [
-        "f_test_result = model_full.compare_f_test(model_restricted)"
+        "f_test_result = model.f_test(\"prpblck + prppov = 1\")"
       ],
       "metadata": {
         "id": "A8J417tLGktu"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -254,47 +214,21 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "kod8a415G1E7",
-        "outputId": "80974aa3-1acd-4d49-d9d9-c31dee064b38"
+        "id": "wqdE3IRkQevj",
+        "outputId": "5b2fbc64-4b24-454d-b9e1-eec757e3f93d"
       },
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "(38.147790395225485, 7.068026768820865e-16, 2.0)"
+              "<class 'statsmodels.stats.contrast.ContrastResults'>\n",
+              "<F test: F=49.69826966929804, p=8.024313803531359e-12, df_denom=396, df_num=1>"
             ]
           },
           "metadata": {},
-          "execution_count": 14
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "print(f\"F-statistic: {f_test_result[0]}\\n\"\n",
-        "      f\"p-value: {f_test_result[1]}\\n\"\n",
-        "      f\"Degrees of freedom: {f_test_result[2]}\")"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "NflESxHxGrCe",
-        "outputId": "5d4a5bde-9dfd-4341-a4d5-3cc852ccda18"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "F-statistic: 38.147790395225485\n",
-            "p-value: 7.068026768820865e-16\n",
-            "Degrees of freedom: 2.0\n"
-          ]
+          "execution_count": 19
         }
       ]
     },
